force-app/main/default/objects/Payment_Method__c/Payment_Method__c.object-meta.xml
<CustomObject>
    <description>The details of how the applicant should be paid; includes banking information</description>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{000000}</displayFormat>
        <label>Payment method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>