force-app/main/default/objects/Payment_Method__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account linked to this payment method</description>
    <inlineHelpText>The account linked to this payment method</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>