force-app/main/default/objects/Payment_Method__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advisor linked to this payment method</description>
    <inlineHelpText>The advisor linked to this payment method</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>Advisor__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>