force-app/main/default/objects/Payment_Method__c/fields/Advisor_Term__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The advisor term to which this payment method applies</description>
    <inlineHelpText>The advisor term to which this payment method applies</inlineHelpText>
    <label>Advisor Term</label>
    <referenceTo>Advisor_Term__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>