force-app/main/default/objects/Payment_Method__c/fields/Alternative_payment_method__c.field-meta.xml
<CustomField>
    <fullName>Alternative_payment_method__c</fullName>
    <description>Alternative payment method, if any</description>
    <inlineHelpText>Alternative payment method, if any</inlineHelpText>
    <label>Alternative payment method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>