force-app/main/default/objects/Payment_Method__c/fields/Alternative_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the contact record for the person who is the recipient</description>
    <inlineHelpText>Link to the contact record for the person who is the recipient</inlineHelpText>
    <label>Alternative: Recipient</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Recipient (if non-blank) must belong to the account of this payment method.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <infoMessage>Recipient (if non-blank) must belong to the account of this payment method.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Methods (Alternative: Recipient)</relationshipLabel>
    <relationshipName>Payment_Methods8</relationshipName>
    <type>Lookup</type>
</CustomField>