force-app/main/default/objects/Payment_Method__c/fields/Alternative_Type__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Type__c</fullName>
    <description>The type of alternative payment method</description>
    <inlineHelpText>The type of alternative payment method</inlineHelpText>
    <label>Alternative: Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Western Union</fullName>
            </value>
            <value>
                <fullName>Individual bank account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>