force-app/main/default/objects/Payment_Method__c/fields/Amount_to_pay__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_pay__c</fullName>
    <description>The amount to be paid on the payment associated with this payment method</description>
    <inlineHelpText>The amount to be paid on the payment associated with this payment method</inlineHelpText>
    <label>Amount to pay</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>