force-app/main/default/objects/Payment_Method__c/fields/Authorized_signer_2__c.field-meta.xml
<CustomField>
    <fullName>Authorized_signer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The second, optional, authorized signer for this payment method</description>
    <inlineHelpText>The second, optional, authorized signer for this payment method</inlineHelpText>
    <label>Authorized signer 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Methods (Authorized signer 2)</relationshipLabel>
    <relationshipName>Payment_Methods1</relationshipName>
    <type>Lookup</type>
</CustomField>