force-app/main/default/objects/Payment_Method__c/fields/Authorized_signer__c.field-meta.xml
<CustomField>
    <fullName>Authorized_signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact who is considered the authorized signer for forms related to this payment method</description>
    <inlineHelpText>The contact who is considered the authorized signer for forms related to this payment method</inlineHelpText>
    <label>Authorized signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Methods (Authorized signer)</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>