force-app/main/default/objects/Payment_Method__c/fields/Bank_account_name__c.field-meta.xml
<CustomField>
    <fullName>Bank_account_name__c</fullName>
    <description>The name on the bank account</description>
    <inlineHelpText>The name on the bank account</inlineHelpText>
    <label>Bank account name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>