force-app/main/default/objects/Payment_Method__c/fields/Bank_account_number__c.field-meta.xml
<CustomField>
    <fullName>Bank_account_number__c</fullName>
    <description>The number of the bank account</description>
    <inlineHelpText>The number of the bank account</inlineHelpText>
    <label>Bank account number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>