force-app/main/default/objects/Payment_Method__c/fields/Bank_city__c.field-meta.xml
<CustomField>
    <fullName>Bank_city__c</fullName>
    <description>Bank address: city</description>
    <inlineHelpText>Bank address: city</inlineHelpText>
    <label>Bank city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>