force-app/main/default/objects/Payment_Method__c/fields/Bank_country__c.field-meta.xml
<CustomField>
    <fullName>Bank_country__c</fullName>
    <description>Bank address: country</description>
    <inlineHelpText>Bank address: country</inlineHelpText>
    <label>Bank country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>