force-app/main/default/objects/Payment_Method__c/fields/Bank_instructions__c.field-meta.xml
<CustomField>
    <fullName>Bank_instructions__c</fullName>
    <description>Bank-related special instructions</description>
    <inlineHelpText>Bank-related special instructions</inlineHelpText>
    <label>Bank instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>