force-app/main/default/objects/Payment_Method__c/fields/Bank_name__c.field-meta.xml
<CustomField>
    <fullName>Bank_name__c</fullName>
    <description>The name of the bank</description>
    <inlineHelpText>The name of the bank</inlineHelpText>
    <label>Bank name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>