force-app/main/default/objects/Payment_Method__c/fields/Bank_phone__c.field-meta.xml
<CustomField>
    <fullName>Bank_phone__c</fullName>
    <description>Bank address: phone</description>
    <inlineHelpText>Bank address: phone</inlineHelpText>
    <label>Bank phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>