force-app/main/default/objects/Payment_Method__c/fields/Bank_state_province__c.field-meta.xml
<CustomField>
    <fullName>Bank_state_province__c</fullName>
    <description>Bank address: state/province</description>
    <inlineHelpText>Bank address: state/province</inlineHelpText>
    <label>Bank state/province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>