force-app/main/default/objects/Payment_Method__c/fields/Bank_street__c.field-meta.xml
<CustomField>
    <fullName>Bank_street__c</fullName>
    <description>Bank address: street</description>
    <inlineHelpText>Bank address: street</inlineHelpText>
    <label>Bank street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>