force-app/main/default/objects/Payment_Method__c/fields/CB_ABA_number__c.field-meta.xml
<CustomField>
    <fullName>CB_ABA_number__c</fullName>
    <description>&quot;Corresponding&quot; bank address: ABA number</description>
    <inlineHelpText>&quot;Corresponding&quot; bank address: ABA number</inlineHelpText>
    <label>CB ABA number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>