force-app/main/default/objects/Payment_Method__c/fields/CB_account_number__c.field-meta.xml
<CustomField>
    <fullName>CB_account_number__c</fullName>
    <description>Account number at the &quot;corresponding&quot; bank</description>
    <inlineHelpText>Account number at the &quot;corresponding&quot; bank</inlineHelpText>
    <label>CB account number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>