force-app/main/default/objects/Payment_Method__c/fields/CB_city__c.field-meta.xml
<CustomField>
    <fullName>CB_city__c</fullName>
    <description>&quot;Corresponding&quot; bank address: City</description>
    <inlineHelpText>&quot;Corresponding&quot; bank address: City</inlineHelpText>
    <label>CB city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>