force-app/main/default/objects/Payment_Method__c/fields/CB_country__c.field-meta.xml
<CustomField>
    <fullName>CB_country__c</fullName>
    <description>&quot;Corresponding&quot; bank address: Country</description>
    <inlineHelpText>&quot;Corresponding&quot; bank address: Country</inlineHelpText>
    <label>CB country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>