force-app/main/default/objects/Payment_Method__c/fields/CB_name__c.field-meta.xml
<CustomField>
    <fullName>CB_name__c</fullName>
    <description>Name of &quot;corresponding&quot; bank</description>
    <inlineHelpText>Name of &quot;corresponding&quot; bank</inlineHelpText>
    <label>CB name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>