force-app/main/default/objects/Payment_Method__c/fields/CB_state_province__c.field-meta.xml
<CustomField>
    <fullName>CB_state_province__c</fullName>
    <description>&quot;Corresponding&quot; bank address: State/province</description>
    <inlineHelpText>&quot;Corresponding&quot; bank address: State/province</inlineHelpText>
    <label>CB state/province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>