force-app/main/default/objects/Payment_Method__c/fields/CB_swift_number__c.field-meta.xml
<CustomField>
    <fullName>CB_swift_number__c</fullName>
    <description>&quot;Corresponding&quot; bank&apos;s swift number</description>
    <inlineHelpText>&quot;Corresponding&quot; bank&apos;s swift number</inlineHelpText>
    <label>CB swift number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>