force-app/main/default/objects/Payment_Method__c/fields/CreatedDate_as_date__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_as_date__c</fullName>
    <description>This record&apos;s created date represented as a date rather than datetime</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This record&apos;s created date represented as a date rather than datetime</inlineHelpText>
    <label>CreatedDate as date</label>
    <type>Date</type>
</CustomField>