force-app/main/default/objects/Payment_Method__c/fields/Currency_code__c.field-meta.xml
<CustomField>
    <fullName>Currency_code__c</fullName>
    <description>The three-character code for the requested currency of this payment method</description>
    <formula>MID( TEXT(Requested_currency__c) , 1, 3)</formula>
    <inlineHelpText>The three-character code for the requested currency of this payment method</inlineHelpText>
    <label>Currency code</label>
    <type>Text</type>
</CustomField>