force-app/main/default/objects/Payment_Method__c/fields/Date_authorization_request_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_authorization_request_sent__c</fullName>
    <description>The date on which the group was notified that they were sent a docusign-based payment information authorization request</description>
    <inlineHelpText>The date on which the group was notified that they were sent a docusign-based payment information authorization request</inlineHelpText>
    <label>Date authorization request sent</label>
    <type>Date</type>
</CustomField>