force-app/main/default/objects/Payment_Method__c/fields/Date_clarification_requested__c.field-meta.xml
<CustomField>
    <fullName>Date_clarification_requested__c</fullName>
    <description>The date on which the group was asked to modify their submitted payment related information and re-submit</description>
    <inlineHelpText>The date on which the group was asked to modify their submitted payment related information and re-submit</inlineHelpText>
    <label>Date clarification requested</label>
    <type>Date</type>
</CustomField>