force-app/main/default/objects/Payment_Method__c/fields/Date_docs_received__c.field-meta.xml
<CustomField>
    <fullName>Date_docs_received__c</fullName>
    <description>The date that the payment info authorization docs are sent from grantee</description>
    <inlineHelpText>The date that the payment info authorization docs are sent from grantee</inlineHelpText>
    <label>Date docs received</label>
    <type>Date</type>
</CustomField>