force-app/main/default/objects/Payment_Method__c/fields/Date_FS_request_letter_sent__c.field-meta.xml
<CustomField>
    <fullName>Date_FS_request_letter_sent__c</fullName>
    <description>The date on which the FS Request letter was sent</description>
    <inlineHelpText>The date on which the FS Request letter was sent</inlineHelpText>
    <label>Date FS request letter sent</label>
    <type>Date</type>
</CustomField>