force-app/main/default/objects/Payment_Method__c/fields/Date_FS_request_letter_signed__c.field-meta.xml
<CustomField>
    <fullName>Date_FS_request_letter_signed__c</fullName>
    <description>The date on which the FS request form letter was signed</description>
    <inlineHelpText>The date on which the FS request form letter was signed</inlineHelpText>
    <label>Date FS request letter signed</label>
    <type>Date</type>
</CustomField>