force-app/main/default/objects/Payment_Method__c/fields/Date_partial_docs_received__c.field-meta.xml
<CustomField>
    <fullName>Date_partial_docs_received__c</fullName>
    <description>The date that partial payment info authorization docs are received from grantee and are under review by GrantsAdmin</description>
    <inlineHelpText>The date that partial payment info authorization docs are received from grantee and are under review by GrantsAdmin</inlineHelpText>
    <label>Date partial docs received</label>
    <type>Date</type>
</CustomField>