force-app/main/default/objects/Payment_Method__c/fields/Date_partial_payment_info_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_partial_payment_info_submitted__c</fullName>
    <description>Date on which the group submitted partial payment information</description>
    <inlineHelpText>Date on which the group submitted partial payment information</inlineHelpText>
    <label>Date partial payment info submitted</label>
    <type>Date</type>
</CustomField>