force-app/main/default/objects/Payment_Method__c/fields/Date_payment_info_confirmed__c.field-meta.xml
<CustomField>
    <fullName>Date_payment_info_confirmed__c</fullName>
    <description>The date on which the information in this payment method was confirmed by staff</description>
    <inlineHelpText>The date on which the information in this payment method was confirmed by staff</inlineHelpText>
    <label>Date payment info confirmed</label>
    <type>Date</type>
</CustomField>