force-app/main/default/objects/Payment_Method__c/fields/Date_ready_for_payment__c.field-meta.xml
<CustomField>
    <fullName>Date_ready_for_payment__c</fullName>
    <description>The date on which the payment method is ready to be paid</description>
    <inlineHelpText>The date on which the payment method is ready to be paid</inlineHelpText>
    <label>Date ready for payment</label>
    <type>Date</type>
</CustomField>