force-app/main/default/objects/Payment_Method__c/fields/Date_submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_submitted__c</fullName>
    <description>Equal to the latest date submitted of the Form Instance associated with this payment method</description>
    <inlineHelpText>Equal to the latest date submitted of the Form Instance associated with this payment method</inlineHelpText>
    <label>Date submitted</label>
    <type>Date</type>
</CustomField>