force-app/main/default/objects/Payment_Method__c/fields/Extra_instructions__c.field-meta.xml
<CustomField>
    <fullName>Extra_instructions__c</fullName>
    <description>Further instructions related to payment method</description>
    <inlineHelpText>Further instructions related to payment method</inlineHelpText>
    <label>Extra instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>