force-app/main/default/objects/Payment_Method__c/fields/Fiscal_sponsor__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account corresponding to the fiscal sponsor (if any) for this payment method</description>
    <inlineHelpText>The account corresponding to the fiscal sponsor (if any) for this payment method</inlineHelpText>
    <label>Fiscal sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Methods (Fiscal sponsor)</relationshipLabel>
    <relationshipName>Payment_Methods1</relationshipName>
    <type>Lookup</type>
</CustomField>