force-app/main/default/objects/Payment_Method__c/fields/Fiscal_sponsor_name__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_sponsor_name__c</fullName>
    <description>Name of fiscal sponsor organization if any</description>
    <inlineHelpText>Name of fiscal sponsor organization if any</inlineHelpText>
    <label>Fiscal sponsor name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>