force-app/main/default/objects/Payment_Method__c/fields/Form_Instance__c.field-meta.xml
<CustomField>
    <fullName>Form_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The form instance from which the data for this payment method was obtained</description>
    <inlineHelpText>The form instance from which the data for this payment method was obtained</inlineHelpText>
    <label>Form Instance</label>
    <referenceTo>Form_Instance__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>