force-app/main/default/objects/Payment_Method__c/fields/FS_agreement_signer_1__c.field-meta.xml
<CustomField>
    <fullName>FS_agreement_signer_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>First contact who is authorized to sign the fiscal sponsorship agreement</description>
    <inlineHelpText>First contact who is authorized to sign the fiscal sponsorship agreement</inlineHelpText>
    <label>FS agreement signer 1</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>FS agreement signer (if non-blank) must belong to the account that is the Fiscal Sponsor.</errorMessage>
        <filterItems>
            <field>$Source.Fiscal_sponsor__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Fiscal_sponsor__c</valueField>
        </filterItems>
        <infoMessage>FS agreement signer (if non-blank) must belong to the account that is the Fiscal Sponsor.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Methods (FS agreement signer 1)</relationshipLabel>
    <relationshipName>Payment_Methods6</relationshipName>
    <type>Lookup</type>
</CustomField>