force-app/main/default/objects/Payment_Method__c/fields/FS_Group__c.field-meta.xml
<CustomField>
    <fullName>FS_Group__c</fullName>
    <description>FS Group to which this payment method belongs based on the owner of the payment method&apos;s parent account</description>
    <formula>TEXT (Account__r.Owner.FS_Group_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>FS Group to which this payment method belongs based on the owner of the payment method&apos;s parent account</inlineHelpText>
    <label>FS Group</label>
    <type>Text</type>
</CustomField>