force-app/main/default/objects/Payment_Method__c/fields/FSRequest_signer_1__c.field-meta.xml
<CustomField>
    <fullName>FSRequest_signer_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>First contact linked to this payment method&apos;s account who is authorized to sign the fiscal sponsorship request</description>
    <inlineHelpText>First contact linked to this payment method&apos;s account who is authorized to sign the fiscal sponsorship request</inlineHelpText>
    <label>FSRequest signer 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Methods (FSRequest signer 1)</relationshipLabel>
    <relationshipName>Payment_Methods4</relationshipName>
    <type>Lookup</type>
</CustomField>