force-app/main/default/objects/Payment_Method__c/fields/FSRequest_signer_2__c.field-meta.xml
<CustomField>
    <fullName>FSRequest_signer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Second contact linked to this payment method&apos;s account who is authorized to sign the fiscal sponsorship request</description>
    <inlineHelpText>Second contact linked to this payment method&apos;s account who is authorized to sign the fiscal sponsorship request</inlineHelpText>
    <label>FSRequest signer 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Methods (FSRequest signer 2)</relationshipLabel>
    <relationshipName>Payment_Methods5</relationshipName>
    <type>Lookup</type>
</CustomField>