force-app/main/default/objects/Payment_Method__c/fields/IBAN_number__c.field-meta.xml
<CustomField>
    <fullName>IBAN_number__c</fullName>
    <description>The bank&apos;s IBAN number</description>
    <inlineHelpText>The bank&apos;s IBAN number</inlineHelpText>
    <label>IBAN number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>