force-app/main/default/objects/Payment_Method__c/fields/Joint_account_owner_1__c.field-meta.xml
<CustomField>
    <fullName>Joint_account_owner_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The first contact linked to this payment method&apos;s account to whom the joint bank account belongs</description>
    <inlineHelpText>The first contact linked to this payment method&apos;s account to whom the joint bank account belongs</inlineHelpText>
    <label>Joint account owner 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Methods (Joint account owner 1)</relationshipLabel>
    <relationshipName>Payment_Methods2</relationshipName>
    <type>Lookup</type>
</CustomField>