force-app/main/default/objects/Payment_Method__c/fields/Most_recent__c.field-meta.xml
<CustomField>
    <fullName>Most_recent__c</fullName>
    <description>Checked if this payment method is its proposal&apos;s most recent</description>
    <formula>IF(NOT(ISBLANK(Proposal__c)), Proposal__r.Current_payment_method__c = Id,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this payment method is its proposal&apos;s most recent</inlineHelpText>
    <label>Most recent</label>
    <type>Checkbox</type>
</CustomField>