force-app/main/default/objects/Payment_Method__c/fields/Payment_instructions__c.field-meta.xml
<CustomField>
    <fullName>Payment_instructions__c</fullName>
    <description>Any instructions related to the payment linked to this payment method</description>
    <inlineHelpText>Any instructions related to the payment linked to this payment method</inlineHelpText>
    <label>Payment instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>