force-app/main/default/objects/Payment_Method__c/fields/Pre_populated_from__c.field-meta.xml
<CustomField>
    <fullName>Pre_populated_from__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The prior payment method (if any) that was used to pre-populate this payment method</description>
    <inlineHelpText>The prior payment method (if any) that was used to pre-populate this payment method</inlineHelpText>
    <label>Pre-populated from</label>
    <referenceTo>Payment_Method__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>