force-app/main/default/objects/Payment_Method__c/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The proposal linked to this payment method</description>
    <inlineHelpText>The proposal linked to this payment method</inlineHelpText>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Payment Methods</relationshipLabel>
    <relationshipName>Payment_Methods</relationshipName>
    <type>Lookup</type>
</CustomField>