force-app/main/default/objects/Payment_Method__c/fields/Requested_currency__c.field-meta.xml
<CustomField>
    <fullName>Requested_currency__c</fullName>
    <description>The requested currency for payments</description>
    <inlineHelpText>The requested currency for payments</inlineHelpText>
    <label>Requested currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>