force-app/main/default/objects/Payment_Method__c/fields/Swift_number__c.field-meta.xml
<CustomField>
    <fullName>Swift_number__c</fullName>
    <description>The bank&apos;s Swift number</description>
    <inlineHelpText>The bank&apos;s Swift number</inlineHelpText>
    <label>Swift number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>