force-app/main/default/objects/Payment_Method__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of payment method</description>
    <inlineHelpText>The type of payment method</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Org account</fullName>
                <default>true</default>
                <label>Org account</label>
            </value>
            <value>
                <fullName>Joint account</fullName>
            </value>
            <value>
                <fullName>Fiscal sponsor</fullName>
            </value>
            <value>
                <fullName>Alternative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>