force-app/main/default/objects/Payment_Method__c/fields/Unique_id__c.field-meta.xml
<CustomField>
    <fullName>Unique_id__c</fullName>
    <description>The id field used to represent this payment method at the vendor</description>
    <inlineHelpText>The id field used to represent this payment method at the vendor</inlineHelpText>
    <label>Unique id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>