force-app/main/default/objects/Payment_Method__c/fields/WU_id__c.field-meta.xml
<CustomField>
    <fullName>WU_id__c</fullName>
    <description>The id field used to represent this payment method at Western Union</description>
    <inlineHelpText>The id field used to represent this payment method at Western Union</inlineHelpText>
    <label>WU id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>