force-app/main/default/objects/Payment_Method__c/validationRules/FSAccountRecordType.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAccountRecordType</fullName>
    <active>false</active>
    <description>The record type of the linked Fiscal Sponsor account must be &quot;Organization GM FS&quot;</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK( Fiscal_sponsor__c )),
  Fiscal_sponsor__r.RecordType.DeveloperName &lt;&gt; &quot;Organization_GM_FS&quot;
)</errorConditionFormula>
    <errorDisplayField>Fiscal_sponsor__c</errorDisplayField>
    <errorMessage>The record type of the linked Fiscal Sponsor account must be &quot;Organization GM FS&quot;</errorMessage>
</ValidationRule>