force-app/main/default/objects/Payment_Method__c/validationRules/NoUniqueIdChangeIfReadyToPay.validationRule-meta.xml
<ValidationRule>
    <fullName>NoUniqueIdChangeIfReadyToPay</fullName>
    <active>true</active>
    <description>The Unique Id may not be changed if the payment method is not ready to be paid.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Date_ready_for_payment__c)),
 ISCHANGED( Unique_id__c )
)</errorConditionFormula>
    <errorMessage>The Unique Id may not be changed if the payment method is not ready to be paid.</errorMessage>
</ValidationRule>