force-app/main/default/objects/Payment_Method__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Proposal__c</columns>
    <columns>Type__c</columns>
    <columns>Amount_to_pay__c</columns>
    <columns>Date_ready_for_payment__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>